# coolq-sdk-rust

./: .rustfmt.toml  Cargo.toml  Instructions.md  LICENSE  README.md  SUMMARY.md  aliases.js  build.rs  cqcode.md  instructions.md  message_segment.md  net.systir.mycqpbot.json  search-index.js  settings.html  source-files.js  update_log.md
.github/workflows/: build.yml  coverage.toml  coverage.yml  main.yml
coolq_sdk_rust/: all.html  attr.main.html  constant.APIVER.html  fn.initialize.html  index.html  sidebar-items.js
coolq_sdk_rust/api/: enum.CQLogLevel.html  fn.add_log.html  fn.can_send_image.html  fn.can_send_record.html  fn.delete_msg.html  fn.get_app_directory.html  fn.get_cookies.html  fn.get_cookies_v2.html  fn.get_csrf_token.html  fn.get_friend_list.html  fn.get_group_info.html  fn.get_group_list.html  fn.get_group_member_info_v2.html  fn.get_group_member_list.html  fn.get_image.html  fn.get_login_nick.html  fn.get_login_qq.html  fn.get_record_v2.html  fn.get_stranger_info.html  fn.send_discuss_msg.html  fn.send_group_msg.html  fn.send_like_v2.html  fn.send_private_msg.html  fn.set_discuss_leave.html  fn.set_fatal.html  fn.set_friend_add_request.html  fn.set_group_add_request_v2.html  fn.set_group_admin.html  fn.set_group_anonymous.html  fn.set_group_anonymous_ban.html  fn.set_group_ban.html  fn.set_group_card.html  fn.set_group_kick.html  fn.set_group_leave.html  fn.set_group_special_title.html  fn.set_group_whole_ban.html  index.html  sidebar-items.js  struct.Convert.html  struct.Error.html  (+2 more)
coolq_sdk_rust/events/: enum.PrivateMessageType.html  index.html  sidebar-items.js  struct.AddFriendRequestEvent.html  struct.AddGroupRequestEvent.html  struct.DiscussMessageEvent.html  struct.FriendAddEvent.html  struct.GroupAdminEvent.html  struct.GroupBanEvent.html  struct.GroupMemberDecreaseEvent.html  struct.GroupMemberIncreaseEvent.html  struct.GroupMessageEvent.html  struct.GroupUploadEvent.html  struct.PrivateMessageEvent.html
coolq_sdk_rust/events/add_friend_request/: struct.AddFriendRequestEvent.html
coolq_sdk_rust/events/add_group_request/: struct.AddGroupRequestEvent.html
coolq_sdk_rust/events/discuss_message/: struct.DiscussMessageEvent.html
coolq_sdk_rust/events/friend_add/: struct.FriendAddEvent.html
coolq_sdk_rust/events/group_admin/: struct.GroupAdminEvent.html
coolq_sdk_rust/events/group_ban/: struct.GroupBanEvent.html
coolq_sdk_rust/events/group_member_decrease/: struct.GroupMemberDecreaseEvent.html
coolq_sdk_rust/gen_app_json/: index.html  sidebar-items.js  struct.AppJson.html
coolq_sdk_rust/prelude/: attr.listener.html  index.html  sidebar-items.js
coolq_sdk_rust/targets/: index.html  sidebar-items.js  struct.Anonymous.html  struct.File.html  trait.ReadString.html
cqrs_builder/: Cargo.toml
cqrs_builder/src/: gen_app_json.rs  lib.rs
cqrs_macro/: Cargo.toml
cqrs_macro/src/: lib.rs
implementors/core/cmp/: trait.Eq.js  (+3 more)
src/: api.rs  cqp.rs  gen_app_json.rs  iconv.rs  lib.rs  listener.rs  qqtargets.rs
src/coolq_sdk_rust/: api.rs.html  gen_app_json.rs.html  lib.rs.html
src/events/: add_friend_request.rs  add_group_request.rs  disable.rs  discuss_message.rs  enable.rs  exit.rs  friend_add.rs  group_admin.rs  group_ban.rs  group_member_decrease.rs  group_member_increase.rs  group_message.rs  group_upload.rs  mod.rs  private_message.rs  start.rs
src/targets/: cqcode.rs  group.rs  message.rs  mod.rs  user.rs
tests/: test_bench.rs
(+61 files in other folders)
