[package]
name = "coolq-sdk-rust"
version = "0.0.2"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

[dependencies]
encoding = "0.2.33"
lazy_static = "1.2.0"
base64 = "0.11.0"
byteorder = "1.3.2"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
regex = "1.3.1"
async-std = { version = "1.3.0", default-features = false, features = ["std", "default"] }
libloading = "0.5"
once_cell = "1.3.1"
md-5 = "0.8.0"
hex = "0.4.1"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0.47"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"