[package]
name = "coolq-sdk-rust"
version = "0.1.0-alpha.4"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A sdk for coolq"
documentation = "https://docs.rs/coolq-sdk-rust/"
repository = "https://github.com/juzi5201314/coolq-sdk-rust"
keywords = ["coolq"]
readme = "README.md"

[dependencies]
lazy_static = "1.2.0"
base64 = "0.11.0"
byteorder = "1.3.2"
regex = "1.3.1"
async-std = { version = "1.3.0", default-features = false, features = ["std", "default"] }
libloading = "0.5"
once_cell = "1.3.1"
md-5 = "0.8.0"
hex = "0.4.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
cqrs_macro = { version = "0.1", path = "cqrs_macro" }
libc = "0.2.67"

[features]
default = []
full-priority = []

[workspace]
members = ["cqrs_macro"]

[patch.crates-io]
cqrs_macro = { path = "cqrs_macro" }

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"