[package]
name = "coolq-sdk-rust"
version = "0.1.10"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A sdk for coolq"
documentation = "https://docs.rs/coolq-sdk-rust/"
repository = "https://github.com/juzi5201314/coolq-sdk-rust"
keywords = ["coolq"]
readme = "README.md"

[dependencies]
lazy_static = "1.2.0"
base64 = "0.11.0"
byteorder = "1.3.2"
regex = "1.3.1"
tokio = { version = "0.2.13", default-features = false, features = ["rt-core", "fs"], optional = true }
libloading = "0.5"
once_cell = "1.3.1"
md-5 = { version = "0.8.0", optional = true }
hex = { version = "0.4.1", optional = true }
cqrs_macro = { version = "0.1", path = "cqrs_macro" }
libc = "0.2.67"

[features]
default = []
enhanced-cqcode = ["tokio", "hex", "md-5"]

[workspace]
members = ["cqrs_macro", "cqrs_builder"]

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"