[package]
name = "cqrs_builder"
version = "0.1.1"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Crate for coolq-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[features]
full-priority = []