[package]
name = "cqrs_macro"
version = "0.1.1"
authors = ["juzi5201314 <1034236490@qq.com>"]
edition = "2018"
license = "MIT"
description = "Crate for coolq-rust-sdk"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.14", features = ["full"] }
darling = "0.10.2"
proc-macro2 = "1.0.8"

[features]
async-listener = []